--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
-  --warning: #ff0707;
+  --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
   --dark: #343a40;
@@ -1136,7 +1136,7 @@ pre code {
   .col-md-6 {
       -ms-flex: 0 0 50%;
       flex: 0 0 50%;
-      max-width: 50%
+      max-width: 100%
   }
 
   .col-md-7 {
@@ -25957,7 +25957,7 @@ select {
 
 .section-bg-w-br-30 {
   background: #fff;
-  border-radius: 30px;
+  border-radius: 80px;
 }
 
 .btn {
@@ -41892,4 +41892,111 @@ body.compensate-for-scrollbar {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   content: '?'
+}/* Compare Product Page */
+
+.compare-product-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.compare-product-card {
+  padding: 20px 15px;
+  background-color: white;
+  border-radius: 13px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: relative;
+  width: 100%;
+  max-width: 300px;
+  margin: 10px;
+  
+}
+
+.compare-product-card .cross {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 25px;
+  padding: 3px;
+  cursor: pointer;
+}
+
+.compare-product-details h5.title {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 500;
+  color: var(--color-1c1c1b);
+}
+
+.compare-product-details h6.price {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+.compare-product-card .product-detail {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .compare-product-wrapper {
+    gap: 10px;
+  }
+
+  .compare-product-card {
+    right: -25%;
+    padding: 15px 10px;
+  }
+
+  .compare-product-details h5.title {
+    font-size: 14px;
+  }
+
+  .compare-product-details h6.price {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .compare-product-wrapper {
+    gap: 5px;
+  }
+
+  .compare-product-card {
+    
+
+    padding: 10px 5px;
+  }
+
+  .compare-product-details h5.title {
+    font-size: 13px;
+  }
+
+  .compare-product-details h6.price {
+    font-size: 13px;
+  }
+}
+
+.compare-icon-container {
+  display: inline-block;
+}
+
+.compare-alert {
+  position: absolute;
+  top: 30px; /* Adjust this value based on your layout */
+  right: -50px;
+  background-color: #ff0101;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 3px;
+  font-size: 12px;
+  white-space: nowrap;
+  z-index: 10;
+  border-radius: 18px;
 }
